--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet">
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       </div>
 
       <header>   
-         <a href="#"><img src="img/logo.svg" alt="Realco logo" class="header_logo"></a>
+         <a href="#"><img src="src/images/logo.svg" alt="Realco logo" class="header_logo"></a>
 
          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -53,13 +53,13 @@
                         <a class="nav-link" href="#">Contact</a>
                      </li>
                      <li class="nav-item nav-item-search">
-                        <img src="img/search.svg" alt="search image">
+                        <img src="src/images/search.svg" alt="search image">
                         <a class="nav-link" href="#">Search</a>
                      </li>
                   </ul>
                </div>
                <button class="bttn_card">
-                  <img src="img/shopping_bag.svg" alt="Shopping bag logo">
+                  <img src="src/images/shopping_bag.svg" alt="Shopping bag logo">
                   Card
                </button>
                <button class="registration_bttn">Registration</button>
@@ -69,8 +69,8 @@
 
       <div class="title_container">
          <div class="title_descr_container">
-            <img src="img/decor_up.svg" alt="Decor up" class="decor_up">
-            <img src="img/decor_down.svg" alt="Decor down" class="decor_down">
+            <img src="src/images/decor_up.svg" alt="Decor up" class="decor_up">
+            <img src="src/images/decor_down.svg" alt="Decor down" class="decor_down">
             <div class="title_wrapper">
                <h3 class="up_title">Find your dream place</h3>
                <h1>Find house for your family in minutes</h1>
@@ -83,57 +83,20 @@
             </div>
          </div>
          <div class="title_img_container">
-            <img src="img/title.png" alt="Flat for title">
+            <img src="src/images/title.png" alt="Flat for title">
          </div>
       </div>
 
       <div class="logos_continer">
          <p>As seen on the world's best magazines and media</p>
-         <ul class="logos_box">
-            <li class="logos_item">
-               <img src="img/logo01.svg" alt="logo 01">
-            </li>
-            <li class="logos_item">
-               <img src="img/logo02.svg" alt="logo 02">
-            </li>
-            <li class="logos_item">
-               <img src="img/logo03.svg" alt="logo 03">
-            </li>
-            <li class="logos_item">
-               <img src="img/logo04.svg" alt="logo 04">
-            </li>
-            <li class="logos_item">
-               <img src="img/logo05.svg" alt="logo 05">
-            </li>
-         </ul>
+         <ul class="logos_box"></ul>
       </div>
 
       <div class="how_works_container">
          <h2>How it works</h2>
          <p>Nunc laoreet consequat nunc at consequat. Praesent aliquam mi id efficitur pellentesque. Maecenas varius
             felis felis.</p>
-         <div class="cards_container">
-            <div class="card_box">
-               <img src="img/house_logo.svg" alt="House logo">
-               <h3>Find property</h3>
-               <p>Odales mauris quis tellus facilisis, vel mattis magna interdum. Curabitur eget aliquam elit. In mauris
-                  purus, auctor a eleifend non.</p>
-            </div>
-
-            <div class="card_box">
-               <img src="img/deal_logo.svg" alt="Deal logo">
-               <h3>Make a deal</h3>
-               <p>Pellentesque suscipit mauris. Nam dictum, erat a volutpat varius, urna nisi sollicitudin orci,
-                  sagittis facilisis odio tortor ac mi.</p>
-            </div>
-
-            <div class="card_box">
-               <img src="img/key_logo.svg" alt="Key logo">
-               <h3>Get your keys</h3>
-               <p>Nulla vel bibendum purus. Etiam tempus quam vel pulvinar rutrum. Duis semper, metus vitae fermentum
-                  consequat.</p>
-            </div>
-         </div>
+         <div class="cards_container"></div>
       </div>
 
       <div class="comfort_first_container">
@@ -147,19 +110,19 @@
                   <button class="explore_bttn">Explore properties</button>
                   <div class="agent_bttn_wrapper">
                      <button class="contact_agent_bttn">Contact agent</button>
-                     <img src="img/arrow_right.svg" alt="Arrow right">
+                     <img src="src/images/arrow_right.svg" alt="Arrow right">
                   </div>
                </div>
             </div>
          </div>
          <div class="comfort_img_container">
-            <img src="img/comfort_flat.png" alt="Comfort flat image">
+            <img src="src/images/comfort_flat.png" alt="Comfort flat image">
          </div>
       </div>
 
       <div class="quick_easy_container">
          <div class="quick_easy_img_container">
-            <img src="img/quick_easy_flat.png" alt="Quick and easy flat image">
+            <img src="src/images/quick_easy_flat.png" alt="Quick and easy flat image">
          </div>
 
          <div class="quick_easy_descr_container">
@@ -171,12 +134,12 @@
             </div>
             <div class="quick_easy_card_container">
                <div class="quick_easy_card">
-                  <img src="img/prices.svg" alt="Prices icon">
+                  <img src="src/images/prices.svg" alt="Prices icon">
                   <h3>Affordable prices</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</p>
                </div>
                <div class="quick_easy_card">
-                  <img src="img/work.svg" alt="Work icon">
+                  <img src="src/images/work.svg" alt="Work icon">
                   <h3>Less paper work</h3>
                   <p>Curabitur porta luctus semper donec eget lobortis leo ac finibus nisi.</p>
                </div>
@@ -185,15 +148,15 @@
                <button class="explore_bttn">Explore properties</button>
                <div class="agent_bttn_wrapper">
                   <button class="contact_agent_bttn">Contact agent</button>
-                  <img src="img/arrow_right.svg" alt="Arrow right">
+                  <img src="src/images/arrow_right.svg" alt="Arrow right">
                </div>
             </div>
          </div>
       </div>
 
       <div class="catalog_container">
-         <img src="img/decor_up_reverse.svg" alt="Decor up" class="decor_up_reverse">
-         <img src="img/decor_down_reverse.svg" alt="Decor down" class="decor_down_reverse">
+         <img src="src/images/decor_up_reverse.svg" alt="Decor up" class="decor_up_reverse">
+         <img src="src/images/decor_down_reverse.svg" alt="Decor down" class="decor_down_reverse">
          <div class="catalog_main_wrapper">
             <div class="catalog_wrapper">
                <h3>Properties</h3>
@@ -205,7 +168,7 @@
                <button class="show_all_house_bttn" id="showAllHouseBttn">Show all houses</button>
                <div class="agent_bttn_wrapper">
                   <button class="contact_agent_bttn">Contact agent</button>
-                  <img src="img/arrow_right.svg" alt="Arrow right">
+                  <img src="src/images/arrow_right.svg" alt="Arrow right">
                </div>
             </div>
          </div>
@@ -217,60 +180,12 @@
             <p>
                Nunc mi ante, fringilla eget iaculis et, maximus vel purus integer lacus urna, aliquet non nisl sit amet.
             </p>
-            <ul class="locations_cards_box">
-               <!-- <li class="location_card">
-                  <h4>San Francisco, CA</h4>
-                  <div class="card_link_box">
-                     <a href="#">View Properties</a>
-                     <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                  </div>
-               </li> -->
+            <ul class="locations_cards_box"></ul>
 
-               <!-- <li class="location_card">
-                  <h4>Los Angeles, CA</h4>
-                  <div class="card_link_box">
-                     <a href="#">View Properties</a>
-                     <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                  </div>
-               </li> -->
-
-               <!-- <li class="location_card" id="locationCard">
-                  <h4>San Diego, CA</h4>
-                  <div class="card_link_box">
-                     <a href="#">View Properties</a>
-                     <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                  </div>
-               </li> -->
-
-               <!-- <li class="location_card">
-                  <h4>New York, NY</h4>
-                  <div class="card_link_box">
-                     <a href="#">View Properties</a>
-                     <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                  </div>
-               </li> -->
-
-               <!-- <li class="location_card">
-                  <h4>Las Vegas, NV</h4>
-                  <div class="card_link_box">
-                     <a href="#">View Properties</a>
-                     <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                  </div>
-               </li> -->
-
-               <!-- <li class="location_card">
-                  <h4>Miami, FL</h4>
-                  <div class="card_link_box">
-                     <a href="#">View Properties</a>
-                     <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                  </div>
-               </li> -->
-            </ul>
             <div class="comfort_bttn_container">
-               <!-- <button class="explore_bttn">Explore properties</button> -->
                <div class="agent_bttn_wrapper">
                   <button class="contact_agent_bttn">Contact agent</button>
-                  <img src="img/arrow_right.svg" alt="Arrow right">
+                  <img src="src/images/arrow_right.svg" alt="Arrow right">
                </div>
             </div>
          </div>
@@ -279,11 +194,11 @@
       <div class="families_priority_container">
          <div class="families_priority_wrapper">
             <div class="families_priority_content">
-               <img src="img/family.svg" alt="Family icon">
+               <img src="src/images/family.svg" alt="Family icon">
                <h2>Families are our priority</h2>
                <p>Curabitur eget aliquam elit. In mauris purus, auctor a eleifend non, placerat vel arcu. In non
                   consectetur lorem. Morbi non varius sapien suscipit mauri.</p>
-               <button>Get started</button>
+               <button>Registration</button>
             </div>
          </div>
       </div>
@@ -291,46 +206,7 @@
       <div class="reviews_container">
          <h2>What customers say</h2>
          <p>Faucibus orci luctus et ultrices posuere cubilia curae.</p>
-         <ul class="reviews_cards_container">
-            <li class="reviews_card">
-               <img src="img/stars.svg" alt="Stars icon">
-               <p>"Aliquam erat volutpat. Nulla pretium nec urna et convallis. Ut varius mi lacus, nec molestie libero
-                  ultricies nec. Aenean lacinia dui elit, ut gravida quam."</p>
-               <div class="user">
-                  <img src="img/user01.svg" alt="User 1 photo">
-                  <div class="user_name_wrap">
-                     <span>Michael Webb</span>
-                     <span>Customer</span>
-                  </div>
-               </div>
-            </li>
-
-            <li class="reviews_card">
-               <img src="img/stars.svg" alt="Stars icon">
-               <p>"Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi
-                  pretium iaculis ultricies. Aenean in leo vitae tortor."</p>
-               <div class="user">
-                  <img src="img/user02.svg" alt="User 2 photo">
-                  <div class="user_name_wrap">
-                     <span>Amber Keene</span>
-                     <span>Customer</span>
-                  </div>
-               </div>
-            </li>
-
-            <li class="reviews_card">
-               <img src="img/stars.svg" alt="Stars icon">
-               <p>"Condimentum viverra orci. Pellentesque suscipit odio nisl, non ultricies purus mattis eget. In
-                  placerat, lorem a sodales ullamcorper, eros nibh laoreet nisl."</p>
-               <div class="user">
-                  <img src="img/user03.svg" alt="User 3 photo">
-                  <div class="user_name_wrap">
-                     <span>Sarah Tarleton</span>
-                     <span>Customer</span>
-                  </div>
-               </div>
-            </li>
-         </ul>
+         <ul class="reviews_cards_container"></ul>
       </div>
 
       <div class="blog_container">
@@ -343,63 +219,13 @@
                <button>View all</button>
             </div>
 
-            <div class="blogs_cards_container">
-               <div class="blog_card">
-                  <img src="img/blog01.png" alt="Photo blog 1">
-                  <div class="blog_descr">
-                     <div class="time_wrapper">
-                        <button>Trends</button>
-                        <span>May 10, 2022</span>
-                     </div>
-                     <h4>The 9 best homes in New York</h4>
-                     <p>Integer tincidunt rutrum faucibus. Proin sit amet varius arcu. Aliquam vel leo augue donec.</p>
-                     <div class="link_box">
-                        <a href="#">Read more</a>
-                        <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                     </div>
-                  </div>
-               </div>
-
-               <div class="blog_card">
-                  <img src="img/blog02.png" alt="Photo blog 2">
-                  <div class="blog_descr">
-                     <div class="time_wrapper">
-                        <button>DIY</button>
-                        <span>May 10, 2022</span>
-                     </div>
-                     <h4>How to easily buy a house with Realco</h4>
-                     <p>Praesent nec felis nisl. Phasellus eget lacus a metus fringilla fermentum sit amet.</p>
-                     <div class="link_box">
-                        <a href="#">Read more</a>
-                        <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                     </div>
-                  </div>
-               </div>
-
-               <div class="blog_card">
-                  <img src="img/blog03.png" alt="Photo blog 3">
-                  <div class="blog_descr">
-                     <div class="time_wrapper">
-                        <button>DIY</button>
-                        <span>May 10, 2022</span>
-                     </div>
-                     <h4>Renting houses - complete guide</h4>
-                     <p>Nunc in bibendum leo, gravida scelerisque quam nulla interdum tellus a turpis.</p>
-                     <div class="link_box">
-                        <a href="#">Read more</a>
-                        <img src="img/arrow_right.svg" alt="Arrow_right logo">
-                     </div>
-                  </div>
-               </div>
-            </div>
-
+            <div class="blogs_cards_container"></div>
          </div>
-
       </div>
 
       <div class="navigation_down">
          <div class="nav_down_box">
-            <a href="#"><img src="img/logo.svg" alt="Realco logo" class="header_logo"></a>
+            <a href="#"><img src="src/images/logo.svg" alt="Realco logo" class="header_logo"></a>
             <ul class="pages_list">
                <li><a href="#">Pages</a></li>
                <li><a href="#">Home</a></li>
@@ -430,39 +256,32 @@
          </div>
 
          <div class="subscribe_form">
-            <span>Subscribe</span>
-            <p>Join our newsletter to stay up to date on features and releases.</p>
-            <div class="bttn_form_nav_container">
-               <input type="email" placeholder="Enter your email">
-               <button>Subscribe</button>
-            </div>
+            <span>To contact with us</span>
+            <p>You can leave your email and we will contact you immediately.</p>
+            <form class="bttn_form_nav_container" id="contactForm">
+               <input type="email" placeholder="Enter your email" id="emailInput" required>
+               <button>Contact</button>
+            </form>
             <p>By subscribing you agree to with our Privacy Policy</p>
+   
          </div>
       </div>
 
       <footer>
          <div class="footer_wrapper">
             <p>© Realco by Minimal Square</p>
-            <ul class="icon_group">
-               <li><a href="#"><img src="img/fb.svg" alt="Facebook logo"></a></li>
-               <li><a href="#"><img src="img/inst.svg" alt="Instagram logo"></a></li>
-               <li><a href="#"><img src="img/tw.svg" alt="Twitter logo"></a></li>
-               <li><a href="#"><img src="img/ln.svg" alt="LinkedIn logo"></a></li>
-            </ul>
-         </div>
-         
+            <ul class="icon_group"></ul>
+         </div>     
       </footer>
    </div>
-   
 
+   <button id="scrollToTopBtn" title="Go to top">↑</button>
    </body>
+
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous">
    </script>
-
-
    <script type="module" src="app.js"></script>
-
 </body>
 </html>
